dockerfile changes. mustache lib is no more needed

--- a/zookeeper/Dockerfile
+++ b/zookeeper/Dockerfile
@@ -1,8 +1,6 @@
 FROM alt:p8
 
 ENV ZOOKEEPER_HOME		/opt/servers/zookeeper/zookeeper-3.4.13
-ENV ZOOKEEPER_DATA_DIR		/zookeeper
-ENV ZOOKEEPER_DATALOG_DIR	/var/log/zookeeper
 ENV ZOOKEEPER_CONF_DIR		${ZOOKEEPER_HOME}/bin
 
 ENV PATH			$PATH:${ZOOKEEPER_HOME}
@@ -12,16 +10,15 @@ RUN \
 	&& apt-get install -y wget tar \
 	&& wget "http://ftp.byfly.by/pub/apache.org/zookeeper/current/zookeeper-3.4.13.tar.gz"\
 	&& tar -xzf zookeeper-3.4.13.tar.gz \
-	&& mv -T zookeeper-3.4.13 /opt/servers/zookeeper/ \
-	&& mkdir ${ZOOKEEPER_DATA_DIR} \
-		 ${ZOOKEEPER_DATALOG_DIR}
+	&& mv -T zookeeper-3.4.13 /opt/servers/zookeeper/
 
 
-COPY zoo.cfg	${ZOOKEEPER_CONF_DIR}/
+COPY zoo.cfg			${ZOOKEEPER_CONF_DIR}/
+COPY bin/Entrypoint-zk.sh	/usr/local/bin/
 
 WORKDIR ${ZOOKEEPER_HOME}
 
 EXPOSE 2181 2888 3888
 
 ENTRYPOINT ["entrypoint-zk.sh"]
-CMD ["-server","1"]
+CMD ["-server"]
