filled conf files with default configurations. additions to Dockerfile

--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -7,18 +7,20 @@ ENV $PATH:${HADOOP_HOME}/bin:${HADOOP_HOME}/sbin
 
 RUN 
 	apt-get update && \
-	apt install wget tar && \
+	apt install open-ssh wget tar && \
 	wget http://ftp.byfly.by/pub/apache.org/hadoop/common/hadoop-2.8.5/hadoop-2.8.5.tar.gz && \
 	tar -xzf hadoop-2.8.5.tar.gz && \
 	mv hadoop-2.8.5 /opt/services/hadoop/ && \
-	rm -rf ${HADOOP_CONF_DIR}/hdfs-site.xml
+	ssh-keygen -t rsa -P -f~/.ssh/id_rsa && \
+	cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys && \
+	chmod 0600 ~/.ssh/authorized_keys
 
-COPY conf/*		${HADOOP_CONF_DIR}
 COPY bin/*		/usr/local/bin/
 
 WORKDIR ${HADOOP_HOME}
 
-VOLUME ["/hadoop", "/var/log/hdfs"]
+VOLUME ["/hadoop", "/var/log/hdfs", "${HADOOP_CONF_DIR}"
+
 
 ENTRYPOINT ["Entrypoint-hdfs.sh"]
  
