--- a/drill/Dockerfile
+++ b/drill/Dockerfile
@@ -4,10 +4,15 @@ ENV DRILL_HOME		/opt/servers/drill
 
 ENV PATH		$PATH:${DRILL_HOME}/bin
 
-RUN 
+RUN \ 
+	mkdir opt/servers && mkdir opt/servers/drill && \
 	apt-get update && \
-	apt install -y tar wget && \
-	wget http://ftp.byfly.by/pub/apache.org/drill/drill-1.14.0/apache-drill-1.14.tar.gz && \
+	apt-get install -y tar wget && \
+	mirror_url=$( \
+        wget -q -O - "http://www.apache.org/dyn/closer.cgi/?as_json=1" \
+        | grep "preferred" \
+        | sed -n 's#.*"\(http://*[^"]*\)".*#\1#p') && \
+	wget ${mirror_url}drill/drill-1.14.0/apache-drill-1.14.0.tar.gz && \
 	tar -xzf apache-drill-1.14.0.tar.gz && \
 	mv -T apache-drill-1.14.0 /opt/servers/drill/
 
