--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -2,13 +2,15 @@ FROM alt:p8
 
 ENV HADOOP_HOME		/opt/servers/hadoop/hadoop-2.8.5
 ENV HADOOP_CONF_DIR	${HADOOP_HOME}/etc/hadoop
+ENV JAVA_HOME		/usr/lib/jvm/java
 
-ENV PATH		$PATH:${HADOOP_HOME}/bin:${HADOOP_HOME}/sbin
+ENV PATH		$PATH:${HADOOP_HOME}/bin:${HADOOP_HOME}/sbin:{JAVA_HOME}/bin
 
 RUN \
 	mkdir opt/servers && mkdir opt/servers/hadoop && \ 
 	apt-get update && \
-	apt-get install -y openssh-server wget tar && \
+	apt-get install -y openssh-server which wget tar && \
+	apt-get install -y java-1.8.0-openjdk-devel &&\
 	mirror_url=$( \
         wget -q -O - "http://www.apache.org/dyn/closer.cgi/?as_json=1" \
         | grep "preferred" \
