added java path to drill dockerfile

--- a/drill/Dockerfile
+++ b/drill/Dockerfile
@@ -1,13 +1,14 @@
 FROM alt:p8
 
 ENV DRILL_HOME		/opt/servers/drill
+ENV JAVA_HOME		/usr/lib/jvm/java
 
-ENV PATH		$PATH:${DRILL_HOME}/bin
+ENV PATH		$PATH:${DRILL_HOME}/bin:${JAVA_HOME}/bin
 
 RUN \ 
 	mkdir opt/servers && mkdir opt/servers/drill && \
 	apt-get update && \
-	apt-get install -y tar wget && \
+	apt-get install -y tar which wget && \
 	mirror_url=$( \
         wget -q -O - "http://www.apache.org/dyn/closer.cgi/?as_json=1" \
         | grep "preferred" \
