--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -21,8 +21,7 @@ RUN \
 	ssh-keygen -t rsa -f ~/.ssh/id_rsa -N "" && \
 	cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys && \
 	chmod 0600 ~/.ssh/authorized_keys && \
-	cd ${HADOOP_HOME} && bin/hdfs namenode -format && \
-	${HADOOP_HOME}/sbin/start-dfs.sh
+	cd ${HADOOP_HOME} && bin/hdfs namenode -format
 
 COPY bin/*		/usr/local/bin/
 
