reformatted hdfs Dockerfile

--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -1,24 +1,31 @@
 FROM alt:p8
 
-ENV HADOOP_HOME		/opt/servers/hadoop/hadoop-2.8.5
+ENV HADOOP_HOME		/opt/servers/hadoop
 ENV HADOOP_CONF_DIR	${HADOOP_HOME}/etc/hadoop
 ENV JAVA_HOME		/usr/lib/jvm/java
 
 ENV PATH		$PATH:${HADOOP_HOME}/bin:${HADOOP_HOME}/sbin:{JAVA_HOME}/bin
 
-RUN  \
-	mkdir -p opt/servers/hadoop/ && \ 
-	apt-get update && \
-	apt-get install -y openssh-server which wget tar openssh && \
-	apt-get install -y java-1.8.0-openjdk-devel && \
+#installing necessary packages
+
+RUN	apt-get update && \
+	apt-get install -y openssh-server which wget tar openssh java-1.8.0-openjdk-devel && \
+	
+
+#downloading and repacking
+
+RUN	mkdir -p /opt/servers/hadoop/ && \
 	mirror_url=$( \
         wget -q -O - "http://www.apache.org/dyn/closer.cgi/?as_json=1" \
         | grep "preferred" \
         | sed -n 's#.*"\(http://*[^"]*\)".*#\1#p') && \  
 	wget ${mirror_url}hadoop/common/hadoop-2.8.5/hadoop-2.8.5.tar.gz && \
 	tar -xzf hadoop-2.8.5.tar.gz && \
-	mv hadoop-2.8.5 /opt/servers/hadoop/ && \
-	echo 'export JAVA_HOME=/usr/lib/jvm/java' >> /opt/servers/hadoop/hadoop-2.8.5/etc/hadoop/hadoop-env.sh && \
+	mv -T  hadoop-2.8.5 /opt/servers/hadoop/
+
+#setting up ssh keys
+	
+RUN	echo 'export JAVA_HOME=/usr/lib/jvm/java' >> /opt/servers/hadoop/hadoop-2.8.5/etc/hadoop/hadoop-env.sh && \
 	/usr/bin/ssh-keygen -A && \
         service sshd start && \
 	ssh-keygen -t rsa -f ~/.ssh/id_rsa -N "" && \
@@ -27,12 +34,10 @@ RUN  \
 	ssh-keyscan localhost, 0.0.0.0 > ~/.ssh/known_hosts && \
 	cd ${HADOOP_HOME} && bin/hdfs namenode -format
 
-COPY bin/*		/usr/local/bin/
-
 WORKDIR ${HADOOP_HOME}
 
-EXPOSE 8088 9000
+COPY ./etc/hadoop/*	${HADOOP_CONF_DIR}
 
-VOLUME ["${HADOOP_HOME}"]
+EXPOSE 8088 9000
  
-CMD /usr/sbin/sshd && /opt/servers/hadoop/hadoop-2.8.5/sbin/start-dfs.sh
+CMD /usr/sbin/sshd && /opt/servers/hadoop/sbin/start-dfs.sh
