--- a/zookeeper/Dockerfile
+++ b/zookeeper/Dockerfile
@@ -1,14 +1,22 @@
 FROM alt:p8
 
-ENV ZOOKEEPER_HOME		/opt/servers/zookeeper/zookeeper-3.4.12
+ARG server_num
+ARG quorum
+
+ENV ZOOKEEPER_HOME		/opt/servers/zookeeper
+ENV ZOOKEEPER_CONF		${ZOOKEEPER_HOME}/conf
 
 ENV PATH			$PATH:${ZOOKEEPER_HOME}/bin
 
-RUN \
-	mkdir -p /opt/servers/zookeeper && \
+#installing necessary packages
+
+RUN	mkdir -p /opt/servers/zookeeper && \
 	apt-get update && \
-	apt-get install -y wget tar java-1.8.0-openjdk-devel && \
-	mirror_url=$( \
+	apt-get install -y wget tar java-1.8.0-openjdk-devel
+
+#downloading and unpacking
+
+RUN	mirror_url=$( \
         wget -q -O - "http://www.apache.org/dyn/closer.cgi/?as_json=1" \
         | grep "preferred" \
         | sed -n 's#.*"\(http://*[^"]*\)".*#\1#p') && \  
@@ -16,8 +24,13 @@ RUN \
 	tar -xzf zookeeper-3.4.12.tar.gz && \
 	mv -T zookeeper-3.4.12 /opt/servers/zookeeper/ 
 
-COPY bin/Entrypoint-zk.sh	/usr/local/bin/
-COPY conf/zoo.cfg		${ZOOKEEPER_HOME}/conf/
+#inserting conf parameters
+
+RUN	mkdir -p /var/lib/zookeeper && \
+	echo $quorum >> ${ZOOKEEPER_CONF}/zoo.cfg && \
+	echo $server_num > /var/lib/zookeeper/myid
+
+COPY conf/zoo.cfg		${ZOOKEEPER_HOME}/conf
 
 WORKDIR ${ZOOKEEPER_HOME}
 
