--- a/drill/conf/drill-override.conf
+++ b/drill/conf/drill-override.conf
@@ -1,7 +1,7 @@
 drill.exec: {
-	cluster-id: "drillbits-1",
+	cluster-id: "CLUSTER_ID",
 	zk: {
-		connect: "localhost:2181",
+		connect: "ZOOKEEPER_QUORUM",
 		root: "drill"
 	}
 	sys.store.provider.zk.blobroot: "HDFS_SERVER/drill/pstore/"
