--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
   zoo-1:
     build:
 	context: ./zookeeper
-	networks:
-	  - vnet
 	ports:
 	  - 2181:2181
 	args:
@@ -15,13 +13,21 @@ services:
   hdfs:
     build:
 	context: ./hadoop
-	networks:
-	  - vnet
 	ports:
 	  - 8088:8088
 
-  
-
-networks:
-  vnet:
+  drill-1:
+    build:
+	context: ./drill
+	ports:
+	  - 8047:8047
+	args:
+	  cluster_id: 'drillbit'
+	  hdfs_server: 'hdfs://hdfs:9000'
+	  quorum: 'server.1=0.0.0.0:2888:3888'
+	stdin_open: true
+	tty: true
+	depends_on:
+	  - "zoo1"
+	  - "hdfs"
      
