--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,19 +14,18 @@ services:
   hdfs:
     build:
       context: ./hadoop
-      ports:
+      expose:
         - 8088:8088
 
   drill-1:
     build:
       context: ./drill
-      ports:
+      expose:
         - 8047:8047
       args:
         cluster_id: 'drillbit'
         hdfs_server: 'hdfs://hdfs:9000'
         quorum: 'server.1=0.0.0.0:2888:3888'
-      stdin_open: true
       tty: true
       depends_on:
         - "zoo1"
