--- a/drill/conf/drill-override.conf
+++ b/drill/conf/drill-override.conf
@@ -1,10 +1,10 @@
 drill.exec: {
-	cluster-id: "CLUSTER_ID",
+	cluster-id: "${CLUSTER_ID}",
 	zk: {
-		connect: "ZOOKEEPER_QUORUM",
+		connect: "${ZOOKEEPER_QUORUM}",
 		root: "drill"
 	}
-	sys.store.provider.zk.blobroot: "HDFS_SERVER/drill/pstore/"
+	sys.store.provider.zk.blobroot: "${HDFS_SERVER}/drill/pstore/"
 	http: {
 		enabled: true,
 		ssl_enabled: false,
@@ -22,7 +22,7 @@ drill.exec: {
 drill.exec.udf: {
 	retry-attempts: 5,
 	directory: {
-		fs: "HDFS_SERVER",
+		fs: "${HDFS_SERVER}",
 		root: "/drill".
 		base: "/udf",
 		local: ${drill.exec.udf.directory.base}"/local",
