--- a/drill/conf/drill-override.conf
+++ b/drill/conf/drill-override.conf
@@ -4,7 +4,7 @@ drill.exec: {
 		connect: "server.1=0.0.0.0:2888:3888",
 		root: "drill"
 	}
-	sys.store.provider.zk.blobroot: "hdfs://hdfs:9000/drill/pstore/"
+	sys.store.provider.zk.blobroot: "hdfs://localhost:9000/drill/pstore/"
 	http: {
 		enabled: true,
 		ssl_enabled: false,
@@ -22,7 +22,7 @@ drill.exec: {
 drill.exec.udf: {
 	retry-attempts: 5,
 	directory: {
-		fs: "hdfs://hdfs:9000",
+		fs: "hdfs://localhost:9000",
 		root: "/drill".
 		base: "/udf",
 		local: ${drill.exec.udf.directory.base}"/local",
