--- a/drill/conf/drill-override.conf
+++ b/drill/conf/drill-override.conf
@@ -19,15 +19,15 @@ drill.exec: {
 	}
 }
 
-drill.exec.udf: {
-	retry-attempts: 5,
-	directory: {
-		fs: "hdfs://localhost:9000",
-		root: "/drill".
-		base: "/udf",
-		local: ${drill.exec.udf.directory.base}"/local",
-		staging: ${drill.exec.udf.directory.base}"/staging",
-		registry: ${drill.exec.udf.directory.base}"/registry"
-		tmp: ${drill.exec.udf.directory.base}"/tmp"
-	}
-}
+#drill.exec.udf: {
+#	retry-attempts: 5,
+#	directory: {
+#		fs: "hdfs://localhost:9000",
+#		root: "/drill".
+#		base: "/udf",
+#		local: ${drill.exec.udf.directory.base}"/local",
+#		staging: ${drill.exec.udf.directory.base}"/staging",
+#		registry: ${drill.exec.udf.directory.base}"/registry"
+#		tmp: ${drill.exec.udf.directory.base}"/tmp"
+#	}
+#}
