--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,39 +3,129 @@ version: '3'
 services:
 
   zoo-1:
+    hostname: zoo1
+    restart: always
     build:
       context: ./zookeeper
       args:
-        quorum: 'server.1=0.0.0.0:2888:3888'
+        quorum: 'server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=0.0.0.0:2888:3888'
         server_num: '1'
-    ports:
-      - 2181:2181
-    networks: ["vnet"]
+    networks: 
+      vnet:
+        aliases: 
+          - zoo-1
+  
+  zoo-2:
+    hostname: zoo2
+    restart: always
+    build:
+      context: ./zookeeper
+      args:
+        quorum: 'server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=0.0.0.0:2888:3888'
+        server_num: '2'
+    networks: 
+      vnet:
+        aliases: 
+          - zoo-2
+  
+  zoo-3:
+    hostname: zoo3
+    restart: always
+    build:
+      context: ./zookeeper
+      args:
+        quorum: 'server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=0.0.0.0:2888:3888'
+        server_num: '3'
+    networks: 
+      vnet:
+        aliases: 
+          - zoo-3
   
   hdfs:
     build:
       context: ./hadoop
     ports:
         - 8088:8088
-    networks: ["vnet"]
+    networks: 
+      vnet:
+        aliases: 
+          - hdfs
 
   drill-1:
+    hostname: drill1
     build:
       context: ./drill
       args:
         cluster_id: 'drillbit'
         hdfs_server: 'hdfs://hdfs:9000'
-        quorum: 'server.1=0.0.0.0:2888:3888'
+        quorum: 'zoo1:2181,zoo2:2181,zoo3:2181'
 
     ports:
       - 8047:8047
-    tty: true
     depends_on:
       - "zoo-1"
+      - "zoo-2"
+      - "zoo-3"
       - "hdfs"
-    networks: ["vnet"]
+    networks: 
+      vnet:
+        aliases: 
+          - drill-1
+
+  drill-2:
+    hostname: drill2
+    build:
+      context: ./drill
+      args:
+        cluster_id: 'drillbit'
+        hdfs_server: 'hdfs://hdfs:9000'
+        quorum: 'zoo1:2181,zoo2:2181,zoo3:2181'
+    depends_on:
+      - "zoo-1"
+      - "zoo-2"
+      - "zoo-3"
+      - "hdfs"
+    networks: 
+      vnet:
+        aliases: 
+          - drill-2
+  
+  drill-3:
+    hostname: drill3
+    build:
+      context: ./drill
+      args:
+        cluster_id: 'drillbit'
+        hdfs_server: 'hdfs://hdfs:9000'
+        quorum: 'zoo1:2181,zoo2:2181,zoo3:2181'
+    depends_on:
+      - "zoo-1"
+      - "zoo-2"
+      - "zoo-3"
+      - "hdfs"
+    networks: 
+      vnet:
+        aliases: 
+          - drill-3
+  
+  drill-4:
+    hostname: drill4
+    build:
+      context: ./drill
+      args:
+        cluster_id: 'drillbit'
+        hdfs_server: 'hdfs://hdfs:9000'
+        quorum: 'zoo1:2181,zoo2:2181,zoo3:2181'
+    depends_on:
+      - "zoo-1"
+      - "zoo-2"
+      - "zoo-3"
+      - "hdfs"
+    networks: 
+      vnet:
+        aliases: 
+          - drill-2
 
 networks: 
   vnet:
-    external: 
-      name: vnet      
+    driver: bridge    
