fixed dataDir path

--- a/zookeeper/conf/zoo.cfg
+++ b/zookeeper/conf/zoo.cfg
@@ -1,6 +1,7 @@
 tickTime=2000
 initLimit=10
 syncLimit=5
-dataDir=/zookeeper
+clientPort=2181
+dataDir=/var/lib/zookeeper
 dataLogDir=/var/log/zookeeper
 
