--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -36,8 +36,8 @@ COPY ./etc/hadoop/*     /opt/servers/hadoop/etc/hadoop/
 RUN	mkdir -p /var/lib/hadoop/dfs/data && \
 	mkdir -p /var/lib/hadoop/dfs/name && \
 	echo 'export JAVA_HOME=/usr/lib/jvm/java' >> /opt/servers/hadoop/etc/hadoop/hadoop-env.sh && \
-	/usr/bin/ssh-keygen -A && \
-        /usr/bin/sshd && \
+	ssh-keygen -A && \
+        /usr/sbin/sshd && \
 	ssh-keygen -t rsa -f ~/.ssh/id_rsa -N "" && \
 	cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys && \
 	chmod 0600 ~/.ssh/authorized_keys && \
