--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       args:
         quorum: 'server.1=0.0.0.0:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888'
         server_num: '1'
+    ports:
+      - 2181:2181
     networks: 
       vnet:
         aliases: 
@@ -23,6 +25,8 @@ services:
       args:
         quorum: 'server.1=zoo1:2888:3888 server.2=0.0.0.0:2888:3888 server.3=zoo3:2888:3888'
         server_num: '2'
+    ports:
+      - 2182:2181
     networks: 
       vnet:
         aliases: 
@@ -36,6 +40,8 @@ services:
       args:
         quorum: 'server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=0.0.0.0:2888:3888'
         server_num: '3'
+    ports:
+      - 2183:2181
     networks: 
       vnet:
         aliases: 
