fixed conf zk-connect instruction

--- a/drill/conf/drill-override.conf
+++ b/drill/conf/drill-override.conf
@@ -1,9 +1,6 @@
 drill.exec: {
 	cluster-id: "${CLUSTER_ID}",
-	zk: {
-		connect: "${ZOOKEEPER_QUORUM}",
-		root: "drill"
-	}
+	zk-connect: "${ZOOKEEPER_QUORUM}",
 	sys.store.provider.zk.blobroot: "${HDFS_SERVER}/drill/pstore/"
 	http: {
 		enabled: true,
