fixed all the mistakes in conf file

--- a/drill/conf/drill-override.conf
+++ b/drill/conf/drill-override.conf
@@ -1,6 +1,9 @@
 drill.exec: {
 	cluster-id: "${CLUSTER_ID}",
-	zk-connect: "${ZOOKEEPER_QUORUM}",
+	zk: {
+		connect: "${ZOOKEEPER_QUORUM}",
+		root: "drill"
+	}
 	sys.store.provider.zk.blobroot: "${HDFS_SERVER}/drill/pstore/"
 	http: {
 		enabled: true,
@@ -20,7 +23,7 @@ drill.exec.udf: {
 	retry-attempts: 5,
 	directory: {
 		fs: "${HDFS_SERVER}",
-		root: "/drill".
+		root: "/drill",
 		base: "/udf",
 		local: ${drill.exec.udf.directory.base}"/local",
 		staging: ${drill.exec.udf.directory.base}"/staging",
