--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,8 @@ services:
   zoo-1:
     hostname: zoo-1
     restart: always
-    build:
-      context: ./zookeeper
-      args:
-        quorum: 'server.1=0.0.0.0:2888:3888\nserver.2=zoo-2:2888:3888\nserver.3=zoo-3:2888:3888'
-        server_num: '1'
-    ports:
-      - 2181:2181
-    networks: 
+    image: nickkbright/zoo1:latest
+    networks:
       vnet:
         aliases: 
           - zoo-1
@@ -20,13 +14,7 @@ services:
   zoo-2:
     hostname: zoo-2
     restart: always
-    build:
-      context: ./zookeeper
-      args:
-        quorum: 'server.1=zoo-1:2888:3888\nserver.2=0.0.0.0:2888:3888\nserver.3=zoo-3:2888:3888'
-        server_num: '2'
-    ports:
-      - 2182:2181
+    image: nickkbright/zoo2:latest
     networks: 
       vnet:
         aliases: 
@@ -35,21 +23,14 @@ services:
   zoo-3:
     hostname: zoo-3
     restart: always
-    build:
-      context: ./zookeeper
-      args:
-        quorum: 'server.1=zoo-1:2888:3888\nserver.2=zoo-2:2888:3888\nserver.3=0.0.0.0:2888:3888'
-        server_num: '3'
-    ports:
-      - 2183:2181
+    image: nickkbright/zoo3:latest
     networks: 
       vnet:
         aliases: 
           - zoo-3
   
   hdfs:
-    build:
-      context: ./hadoop
+    image: nickkbright/hdfs:latest
     ports:
         - 8088:8088
     networks: 
@@ -59,13 +40,7 @@ services:
 
   drill-1:
     hostname: drill-1
-    build:
-      context: ./drill
-      args:
-        cluster_id: 'drillbit'
-        hdfs_server: 'hdfs://hdfs:9000'
-        quorum: 'zoo-1:2181,zoo-2:2181,zoo-3:2181'
-
+    image: nickkbright/apache-drill:1-14
     ports:
       - 8047:8047
     depends_on:
@@ -85,12 +60,7 @@ services:
 
   drill-2:
     hostname: drill-2
-    build:
-      context: ./drill
-      args:
-        cluster_id: 'drillbit'
-        hdfs_server: 'hdfs://hdfs:9000'
-        quorum: 'zoo-1:2181,zoo-2:2181,zoo-3:2181'
+    image: nickkbright/apache-drill:1-14
     depends_on:
       - "zoo-1"
       - "zoo-2"
@@ -109,12 +79,7 @@ services:
   
   drill-3:
     hostname: drill-3
-    build:
-      context: ./drill
-      args:
-        cluster_id: 'drillbit'
-        hdfs_server: 'hdfs://hdfs:9000'
-        quorum: 'zoo-1:2181,zoo-2:2181,zoo-3:2181'
+    image: nickkbright/apache-drill:1-14
     depends_on:
       - "zoo-1"
       - "zoo-2"
@@ -133,12 +98,7 @@ services:
   
   drill-4:
     hostname: drill-4
-    build:
-      context: ./drill
-      args:
-        cluster_id: 'drillbit'
-        hdfs_server: 'hdfs://hdfs:9000'
-        quorum: 'zoo-1:2181,zoo-2:2181,zoo-3:2181'
+    image: nickkbright/apache-drill:1-14
     depends_on:
       - "zoo-1"
       - "zoo-2"
